# stm32mp1-hal

./: Cargo.toml  build.rs  deploy.sh  memory.x  raichu-cubemx_CM4.elf  stm32mp1.x
.cargo/: config
hal/: Cargo.toml
hal/src/: gpio.rs  lib.rs  rcc.rs
libmetal-embedded/: Cargo.toml
libmetal-embedded/src/: init.rs  io.rs  lib.rs  state.rs
openamp/: Cargo.toml
openamp/src/: lib.rs  vring.rs
src/: fifo.rs  ipcc.rs  main.rs  resource_table.rs  rpmsg.rs  rpmsg_virtio.rs  stm32mp1.rs  string.rs  trace.rs  virtio.rs  vring.rs
src/version/: data.rs  mod.rs
vring/src/: lib.rs
