[package]
name = "stm32mp1-hal"
version = "0.1.0"
authors = ["Noah Hüsser <yatekii@yatekii.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stm32mp1-pac = { version = "0.1.0", git = "https://github.com/Yatekii/stm32mp1-pac" }
cortex-m = "0.6.1"
nb = "0.1.2"

[dependencies.vring]
path = "./vring"

[dependencies.volatile-register]
version = "0.2"

[dependencies.cortex-m-rt]
features = ["device"]
version = "0.6.10"