[package]
name = "stm32mp1-hal"
version = "0.1.0"
authors = ["Noah Hüsser <yatekii@yatekii.ch>"]
edition = "2018"

[dependencies]
cortex-m = "0.6.1"
nb = "0.1.2"
embedded-hal = { version = "0.2.3", features = ["unproven"] }

[dependencies.vring]
path = "./vring"

[dependencies.hal]
path = "./hal"
features = ["stm32mp153"]

[dependencies.volatile-register]
version = "0.2"

[dependencies.cortex-m-rt]
features = ["device"]
version = "0.6.10"